fix: spacing between task items

--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -27,7 +27,7 @@
     align-content: stretch;
     border-radius: 5px;
     margin: 2px 0;
-    padding: 0 6px;
+    padding: 6px 6px;
     /* min-height: 1.5rem; */
     /* height: auto; */
     /* resize: vertical; */
